--- a/Frontend/admin/Domains/styles.css
+++ b/Frontend/admin/Domains/styles.css
@@ -117,8 +117,7 @@ body {
 }
 
 
-
-.main_content .domainWindow {
+.domainWindow {
   display: flex;
   width: 65vw;
   height: 70vh;
@@ -127,21 +126,20 @@ body {
   color: #2e3e3f;
   font-weight: bold;
   font-size: 2em;
-  padding-left: 23%;
+  padding-left: 10%;
   border: 2px solid rgba(211, 245, 250, 0.3);
   border-radius: 28px;
   flex-direction: column;
 }
 
-.main_content .domainWindow h2{
+
+.domainWindow h2{
   margin-top: 2%;
   margin-bottom: 4%;
+  justify-content: center;
   color: #2e3e3f;
 }
 
-#domainList ul li{
-  color: #2e3e3f;
-}
 
 .domainWindow .AddButton{
   margin-top: 3%;
@@ -154,18 +152,36 @@ body {
     outline: none;
 }
 #domainList{
-  width: 380px;
+  display: flex;
+  flex-direction: column;
+  width: 70%;
   height: 280px;
   overflow: auto;
 }
+
+#domainList li{
+  color: #2e3e3f;
+  display: flex;
+  flex-direction: row;
+}
+.fa-pen{
+  margin-left: auto;
+  margin-right: 10px;
+}
+.fa-trash{
+
+  margin-right: 10px;
+}
+#domainList li a{
+  align-self: left;
+}
+
+
 #username_form{
   display: none;
 }
 
-.main_content .domainWindow .fas:first-of-type{
-  margin-left: 2%;
-  
-}
+
 .main_content .domainWindow .fas:hover{
   color:#01858f;
   font-size: 40px;
